--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <br>
         <br>
         <p>Also heres a cool video</p>
-        <video src="https://www.youtube.com/watch?v=Tdbr_wm6rI4" width="800" height="600" controls autoplay></video>
+         <iframe width="800" height="600"src="https://www.youtube.com/watch?v=Tdbr_wm6rI4"></iframe> 
         <br>
         <br>
        <a href="./boards.html"> Boards page </a> | <a href="./welcome_page.html">UAT Space page</a>
