--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <br>
         <br>
         <p>Also heres a cool video</p>
-         <iframe width="800" height="600"src="https://github.com/glenson3377/glenson3377.github.io/blob/main/coding%20update.mp4"></iframe> 
+         <iframe width="800" height="600"src="./coding update.mp4"></iframe> 
         <br>
         <br>
        <a href="./boards.html"> Boards page </a> | <a href="./welcome_page.html">UAT Space page</a>
