--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="customizer.css">
     <head>
         <Title>Hunter's Website</Title>
+        <link rel="icon" type="image/x-icon" href="./Warzone 2100 The Collective.ico">
     </head>
     <body>
         <h1>Welcome to Hunter's website</h1>
